k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lr-model-api
  namespace: ml-serving
  labels:
    app: lr-model-api
spec:
  type: ClusterIP
  selector:
    app: lr-model-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
